--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -100,6 +100,8 @@
 
 .col { /* columnn used for 3 column base layout */
 
+
+	min-height:225px;
 	background:#ccc;
 	border:2px solid #9E3A52;
 	float:left;
